# datafusion

./: Cargo.toml
benchmarks/: Cargo.toml
benchmarks/src/: clickbench.rs  lib.rs  parquet37_filter.rs  parquet_filter.rs  sort.rs  sort_tpch.rs
benchmarks/src/imdb/: run.rs
benchmarks/src/tpch/: convert.rs  run.rs
benchmarks/src/util/: access_log.rs  options.rs  run.rs
datafusion/common/src/: config.rs
datafusion/common/src/file_options/: parquet_writer.rs
datafusion/core/: Cargo.toml
datafusion/core/src/datasource/avro_to_arrow/: arrow_array_reader.rs
datafusion/core/src/datasource/file_format/: mod.rs  options.rs  parquet.rs
datafusion/core/src/datasource/physical_plan/parquet/: access_plan.rs  cache_filter.rs  mod.rs  opener.rs  reader7.rs  row_filter.rs
datafusion/core/src/test_util/: parquet.rs
datafusion/core/tests/parquet/: schema.rs
datafusion/execution/: Cargo.toml
datafusion/execution/src/cache/: cache_unit.rs
datafusion/expr/src/type_coercion/: binary.rs
datafusion/flight-table/: Cargo.toml
datafusion/flight-table/src/: exec.rs  lib.rs  metrics.rs  sql.rs  table.rs  utils.rs
datafusion/functions/src/regex/: regexplike.rs
datafusion/physical-expr/src/expressions/: binary.rs
datafusion/physical-plan/src/coalesce/: mod.rs
datafusion/proto-common/proto/: datafusion_common.proto
datafusion/proto-common/src/from_proto/: mod.rs
datafusion/proto-common/src/to_proto/: mod.rs
datafusion/proto/src/logical_plan/: file_formats.rs
datafusion/sql/src/unparser/: plan.rs
dev/: bench_script.sh  flight-cache.sh
