[package]
name = "datafusion-flight-table"
version = "42.0.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/datafusion-contrib/datafusion-table-providers"
license = "Apache-2.0"
description = "Extend the capabilities of DataFusion to support additional data sources via implementations of the `TableProvider` trait."

[dependencies]
arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-schema = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
datafusion = { workspace = true }
datafusion-catalog = { workspace = true }
datafusion-common = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan = { workspace = true }
datafusion-proto = { workspace = true }
datafusion-sql = { workspace = true }
futures = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = { version = "0.12", features = [
    "tls-native-roots",
    "tls-webpki-roots",
] }

[dev-dependencies]
